--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,6 +3,21 @@
     <%= link_to "Postit!", root_path, :class => 'brand' %>
   </li>
   <li>
-    <%= link_to 'link', '' %>
+    <%= link_to 'New Post', new_post_path %>
+  </li>
+
+</ul>
+
+<div class='btn-group nav_item'>
+  <% link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
+  Categories <span class='caret'></span>
+  <% end %>
+  <ul class='dropdown-menu'>
+   <% Category.all.each do |category| %>
+   <li>
+   	<%= link_to category.name, category_path(category) %>
+   </li>
+   <% end %>
+    <%= link_to 'New Category', new_category_path %>
   </li>
 </ul>
