--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,9 +2,22 @@
   <li>
     <%= link_to "Postit!", root_path, :class => 'brand' %>
   </li>
+  <% if logged_in? %>
   <li>
     <%= link_to 'New Post', new_post_path %>
   </li>
+  <li>
+   <%= link_to 'Log out', logout_path %>
+  </li>
+
+  <% else %>
+  <li>
+    <%= link_to 'Register', new_user_path %>
+  </li>
+  <li>
+    <%= link_to 'Log in', login_path %>
+  </li>
+  <% end %>
 
 </ul>
 
