--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -7,5 +7,10 @@
   <%= f.label :url %>
   <%= f.text_field :url %>
   <br/>
+  <%= f.label "Categories" %>
+  <%=f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+   <% cb.label(class: "checkbox inline") {cb.check_box(class: "checkbox") + cb.test} %>
+  <% end %>
+  <br />
   <%= f.submit(@post.new_record? ? "Create Post" : "Update Post") %>
  <% end %>
