--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,15 @@
 
 <ul>
   <% @posts.each do |post| %>
-    <li><%= link_to post.title, post_path(post) %> (<%= link_to "edit", edit_post_path(post)%>) </li>
+    <li>
+    <%= link_to '+', vote_post_path(post, vote: true), method: 'post' if logged_in? %>
+    | [<%= post.total_votes %> ]
+    <%= link_to '-', vote_post_path(post, vote: false), method: 'post' if logged_in? %>
+
+    <%= link_to post.title, post_path(post) %> (<%= link_to "edit", edit_post_path(post)%>) 
+      <br/>
+    posted by <%= post.user.name %> on <%= pretty_date(post.created_at) %> 
+    </li>
+
   <% end %>
 </ul>
