--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,7 @@
 
 <ul>
  <% @post.comments.each do |comment| %>
- <li> <%= comment.body %> </li>
+ <li> <%= comment.body %> posted by <%= comment.user.name %></li>
  <% end %>
  
 </ul>
